<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.guardado.comunicacionf.OpcionesActivity">

    <Button
        android:id="@+id/mostra_p"
        android:text="@string/ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/buscar_p"
        android:text="@string/buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/agregar_p"
        android:text="@string/agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/actualizar_p"
        android:text="@string/Actulizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/eliminar_p"
        android:text="@string/eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
